[gd_scene load_steps=13 format=2]

[ext_resource path="res://assets/theme/theme.tres" type="Theme" id=1]
[ext_resource path="res://ui/MainMenu.gd" type="Script" id=2]
[ext_resource path="res://assets/images/civilization.png" type="Texture" id=3]
[ext_resource path="res://ui/mainMenu/SelectPlayerPage.gd" type="Script" id=4]
[ext_resource path="res://assets/font/pangolin/pangolin-lg.tres" type="DynamicFont" id=5]
[ext_resource path="res://ui/forms/CreateAnAccountForm.tscn" type="PackedScene" id=6]
[ext_resource path="res://ui/world/WorldMap.tscn" type="PackedScene" id=7]
[ext_resource path="res://ui/forms/LogInForm.tscn" type="PackedScene" id=8]
[ext_resource path="res://assets/tiles/tilemap_packed_2.png" type="Texture" id=9]
[ext_resource path="res://ui/mainMenu/VersionLabel.gd" type="Script" id=10]
[ext_resource path="res://ui/mainMenu/WorldMapPage.tscn" type="PackedScene" id=11]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 9 )
region = Rect2( 0, 128, 16, 16 )

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
script = ExtResource( 2 )

[node name="Background" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Civilization" type="Sprite" parent="Background"]
visible = false
position = Vector2( 504, 299 )
texture = ExtResource( 3 )

[node name="ColorRect" type="ColorRect" parent="Background"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 1, 0.960784, 0.870588, 1 )

[node name="Version" type="Label" parent="Background"]
margin_left = 4.0
margin_top = 4.0
margin_right = 44.0
margin_bottom = 24.0
custom_colors/font_color = Color( 0.266667, 0.0823529, 0.027451, 1 )
text = "Indev (v. 0.0.4)"
script = ExtResource( 10 )

[node name="Loading" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Label" type="Label" parent="Loading"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_colors/font_color = Color( 0.0470588, 0.368627, 0.27451, 1 )
text = "Loading..."
align = 1
valign = 1

[node name="Welcome" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="HBoxContainer" type="HBoxContainer" parent="Welcome"]
anchor_right = 1.0
anchor_bottom = 1.0
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="Welcome/HBoxContainer"]
margin_left = 312.0
margin_right = 712.0
margin_bottom = 600.0
rect_min_size = Vector2( 400, 0 )
alignment = 1

[node name="Panel" type="PanelContainer" parent="Welcome/HBoxContainer/VBoxContainer"]
margin_top = 197.0
margin_right = 400.0
margin_bottom = 403.0

[node name="MarginContainer" type="MarginContainer" parent="Welcome/HBoxContainer/VBoxContainer/Panel"]
margin_left = 7.0
margin_top = 7.0
margin_right = 393.0
margin_bottom = 199.0

[node name="VBoxContainer" type="VBoxContainer" parent="Welcome/HBoxContainer/VBoxContainer/Panel/MarginContainer"]
margin_left = 10.0
margin_top = 10.0
margin_right = 376.0
margin_bottom = 182.0

[node name="Label" type="Label" parent="Welcome/HBoxContainer/VBoxContainer/Panel/MarginContainer/VBoxContainer"]
margin_right = 366.0
margin_bottom = 31.0
custom_colors/font_color = Color( 0.341176, 0.152941, 0.0862745, 1 )
custom_fonts/font = ExtResource( 5 )
text = "Welcome to Rivernotch!"
align = 1

[node name="OpenLogInButton" type="Button" parent="Welcome/HBoxContainer/VBoxContainer/Panel/MarginContainer/VBoxContainer"]
margin_top = 39.0
margin_right = 366.0
margin_bottom = 78.0
text = "Log In"

[node name="OpenCreateAccountButton" type="Button" parent="Welcome/HBoxContainer/VBoxContainer/Panel/MarginContainer/VBoxContainer"]
margin_top = 86.0
margin_right = 366.0
margin_bottom = 125.0
text = "Create an Account"

[node name="OpenWorldMapPage" type="Button" parent="Welcome/HBoxContainer/VBoxContainer/Panel/MarginContainer/VBoxContainer"]
margin_top = 133.0
margin_right = 366.0
margin_bottom = 172.0
text = "World Map"

[node name="CreateAnAccount" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[node name="HBoxContainer" type="HBoxContainer" parent="CreateAnAccount"]
anchor_right = 1.0
anchor_bottom = 1.0
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="CreateAnAccount/HBoxContainer"]
margin_left = 312.0
margin_right = 712.0
margin_bottom = 600.0
rect_min_size = Vector2( 400, 0 )
alignment = 1

[node name="BackButtonWrapper" type="Control" parent="CreateAnAccount/HBoxContainer/VBoxContainer"]
margin_top = 203.0
margin_right = 400.0
margin_bottom = 203.0

[node name="CreateAnAccountBackButton" type="Button" parent="CreateAnAccount/HBoxContainer/VBoxContainer/BackButtonWrapper"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 1.0
margin_top = -30.0
margin_right = 71.0
margin_bottom = 6.0
text = "< Back"

[node name="CreateAnAccountForm" parent="CreateAnAccount/HBoxContainer/VBoxContainer" instance=ExtResource( 6 )]
margin_top = 211.0
margin_bottom = 397.0

[node name="Login" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[node name="HBoxContainer" type="HBoxContainer" parent="Login"]
anchor_right = 1.0
anchor_bottom = 1.0
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="Login/HBoxContainer"]
margin_left = 312.0
margin_right = 712.0
margin_bottom = 600.0
rect_min_size = Vector2( 400, 0 )
alignment = 1

[node name="BackButtonWrapper" type="Control" parent="Login/HBoxContainer/VBoxContainer"]
margin_top = 203.0
margin_right = 400.0
margin_bottom = 203.0

[node name="LogInBackButton" type="Button" parent="Login/HBoxContainer/VBoxContainer/BackButtonWrapper"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 1.0
margin_top = -31.0
margin_right = 71.0
margin_bottom = 5.0
text = "< Back"

[node name="LogInForm" parent="Login/HBoxContainer/VBoxContainer" instance=ExtResource( 8 )]
margin_top = 211.0
margin_bottom = 397.0

[node name="SelectPlayerPage" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )

[node name="HBoxContainer" type="HBoxContainer" parent="SelectPlayerPage"]
anchor_right = 1.0
anchor_bottom = 1.0
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="SelectPlayerPage/HBoxContainer"]
margin_left = 274.0
margin_right = 750.0
margin_bottom = 600.0
rect_min_size = Vector2( 400, 0 )
alignment = 1

[node name="BackButtonWrapper" type="Control" parent="SelectPlayerPage/HBoxContainer/VBoxContainer"]
margin_top = 70.0
margin_right = 476.0
margin_bottom = 70.0

[node name="LogOutButton" type="Button" parent="SelectPlayerPage/HBoxContainer/VBoxContainer/BackButtonWrapper"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 1.0
margin_top = -30.0
margin_right = 71.0
margin_bottom = 6.0
text = "Log out"

[node name="PlayersDisplay" type="PanelContainer" parent="SelectPlayerPage/HBoxContainer/VBoxContainer"]
margin_top = 78.0
margin_right = 476.0
margin_bottom = 530.0
theme = ExtResource( 1 )

[node name="MarginContainer" type="MarginContainer" parent="SelectPlayerPage/HBoxContainer/VBoxContainer/PlayersDisplay"]
margin_left = 7.0
margin_top = 7.0
margin_right = 469.0
margin_bottom = 445.0

[node name="VBox" type="VBoxContainer" parent="SelectPlayerPage/HBoxContainer/VBoxContainer/PlayersDisplay/MarginContainer"]
margin_left = 10.0
margin_top = 10.0
margin_right = 452.0
margin_bottom = 428.0

[node name="Name" type="Label" parent="SelectPlayerPage/HBoxContainer/VBoxContainer/PlayersDisplay/MarginContainer/VBox"]
margin_right = 442.0
margin_bottom = 31.0
custom_fonts/font = ExtResource( 5 )
text = "Name"

[node name="CreateNewPlayer" type="Button" parent="SelectPlayerPage/HBoxContainer/VBoxContainer/PlayersDisplay/MarginContainer/VBox"]
margin_top = 39.0
margin_right = 442.0
margin_bottom = 78.0
text = "+ Create new player"

[node name="PlayerContainer" type="PanelContainer" parent="SelectPlayerPage/HBoxContainer/VBoxContainer/PlayersDisplay/MarginContainer/VBox"]
visible = false
margin_top = 86.0
margin_right = 414.0
margin_bottom = 201.0

[node name="MarginContainer" type="MarginContainer" parent="SelectPlayerPage/HBoxContainer/VBoxContainer/PlayersDisplay/MarginContainer/VBox/PlayerContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 407.0
margin_bottom = 108.0

[node name="HBoxContainer" type="HBoxContainer" parent="SelectPlayerPage/HBoxContainer/VBoxContainer/PlayersDisplay/MarginContainer/VBox/PlayerContainer/MarginContainer"]
margin_left = 10.0
margin_top = 10.0
margin_right = 390.0
margin_bottom = 91.0
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="SelectPlayerPage/HBoxContainer/VBoxContainer/PlayersDisplay/MarginContainer/VBox/PlayerContainer/MarginContainer/HBoxContainer"]
margin_right = 296.0
margin_bottom = 81.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 4.0
custom_constants/separation = 0

[node name="Desc" type="Label" parent="SelectPlayerPage/HBoxContainer/VBoxContainer/PlayersDisplay/MarginContainer/VBox/PlayerContainer/MarginContainer/HBoxContainer/VBoxContainer"]
visible = false
margin_top = 31.0
margin_right = 248.0
margin_bottom = 51.0

[node name="HBoxContainer" type="HBoxContainer" parent="SelectPlayerPage/HBoxContainer/VBoxContainer/PlayersDisplay/MarginContainer/VBox/PlayerContainer/MarginContainer/HBoxContainer/VBoxContainer"]
margin_right = 296.0
margin_bottom = 30.0

[node name="Label" type="Label" parent="SelectPlayerPage/HBoxContainer/VBoxContainer/PlayersDisplay/MarginContainer/VBox/PlayerContainer/MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer"]
margin_top = 5.0
margin_right = 108.0
margin_bottom = 25.0
custom_colors/font_color = Color( 0.443137, 0.372549, 0.0705882, 1 )
text = "Spawn postion: "

[node name="SpawnNorthLineEdit" type="LineEdit" parent="SelectPlayerPage/HBoxContainer/VBoxContainer/PlayersDisplay/MarginContainer/VBox/PlayerContainer/MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer"]
margin_left = 112.0
margin_right = 182.0
margin_bottom = 30.0
placeholder_text = "North"

[node name="SpawnEastLineEdit" type="LineEdit" parent="SelectPlayerPage/HBoxContainer/VBoxContainer/PlayersDisplay/MarginContainer/VBox/PlayerContainer/MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer"]
margin_left = 186.0
margin_right = 256.0
margin_bottom = 30.0
placeholder_text = "East"

[node name="Control" type="Control" parent="SelectPlayerPage/HBoxContainer/VBoxContainer/PlayersDisplay/MarginContainer/VBox/PlayerContainer/MarginContainer/HBoxContainer/VBoxContainer"]
margin_top = 30.0
margin_right = 296.0
margin_bottom = 42.0
rect_min_size = Vector2( 0, 12 )

[node name="EnterWorldButton" type="Button" parent="SelectPlayerPage/HBoxContainer/VBoxContainer/PlayersDisplay/MarginContainer/VBox/PlayerContainer/MarginContainer/HBoxContainer/VBoxContainer"]
margin_top = 42.0
margin_right = 296.0
margin_bottom = 81.0
text = "Enter World"

[node name="Control" type="Control" parent="SelectPlayerPage/HBoxContainer/VBoxContainer/PlayersDisplay/MarginContainer/VBox/PlayerContainer/MarginContainer/HBoxContainer"]
margin_left = 300.0
margin_right = 380.0
margin_bottom = 81.0
rect_min_size = Vector2( 80, 80 )
size_flags_horizontal = 3

[node name="Sprite" type="Sprite" parent="SelectPlayerPage/HBoxContainer/VBoxContainer/PlayersDisplay/MarginContainer/VBox/PlayerContainer/MarginContainer/HBoxContainer/Control"]
position = Vector2( 0, 3 )
scale = Vector2( 4, 4 )
texture = SubResource( 1 )
centered = false

[node name="WorldMap" parent="SelectPlayerPage/HBoxContainer/VBoxContainer/PlayersDisplay/MarginContainer/VBox" instance=ExtResource( 7 )]
margin_top = 86.0
margin_right = 442.0
margin_bottom = 418.0

[node name="WorldMapPage" parent="." instance=ExtResource( 11 )]
visible = false

[connection signal="button_down" from="Welcome/HBoxContainer/VBoxContainer/Panel/MarginContainer/VBoxContainer/OpenLogInButton" to="." method="_on_OpenLogInButton_button_down"]
[connection signal="button_down" from="Welcome/HBoxContainer/VBoxContainer/Panel/MarginContainer/VBoxContainer/OpenCreateAccountButton" to="." method="_on_OpenCreateAccountButton_button_down"]
[connection signal="button_down" from="Welcome/HBoxContainer/VBoxContainer/Panel/MarginContainer/VBoxContainer/OpenWorldMapPage" to="." method="_on_OpenWorldMapPage_button_down"]
[connection signal="pressed" from="CreateAnAccount/HBoxContainer/VBoxContainer/BackButtonWrapper/CreateAnAccountBackButton" to="." method="_on_CreateAnAccountBackButton_pressed"]
[connection signal="pressed" from="Login/HBoxContainer/VBoxContainer/BackButtonWrapper/LogInBackButton" to="." method="_on_LogInBackButton_pressed"]
[connection signal="pressed" from="SelectPlayerPage/HBoxContainer/VBoxContainer/BackButtonWrapper/LogOutButton" to="." method="_on_LogOutButton_pressed"]
[connection signal="button_down" from="SelectPlayerPage/HBoxContainer/VBoxContainer/PlayersDisplay/MarginContainer/VBox/CreateNewPlayer" to="SelectPlayerPage" method="_on_CreateNewPlayer_button_down"]
[connection signal="button_down" from="SelectPlayerPage/HBoxContainer/VBoxContainer/PlayersDisplay/MarginContainer/VBox/PlayerContainer/MarginContainer/HBoxContainer/VBoxContainer/EnterWorldButton" to="SelectPlayerPage" method="_on_EnterWorldButton_button_down"]
[connection signal="back_button_pressed" from="WorldMapPage" to="." method="_on_WorldMapPage_back_button_pressed"]
